# online-calculator

./: .gitignore  .rules  README.md  docker-compose.yml
.agents/: context.md
.agents/workflows/: custom_rules.md
backend/: Dockerfile  config.py  constants.py  database.py  error_handlers.py  exceptions.py  main.py  models.py  pyproject.toml  schemas.py  worker.py
backend/ai/: service.py
backend/auth/: auth_utils.py  repo.py  route.py  service.py
backend/projects/: file_service.py  repo.py  route.py  service.py
data/: app.db
docs/: calculations.md  deliverables.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/auth/: api.ts  store.ts
frontend/src/components/: ThreeViewer.tsx
frontend/src/components/project/: ConfirmModal.tsx  CreateProjectModal.tsx  ParametersPanel.tsx  ResultsPanel.tsx  ViewerPanel.tsx
frontend/src/lib/: apiClient.ts  calculator.ts  i18n.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  ProjectEditor.tsx
frontend/src/projects/: api.ts  store.ts
