[tool.poetry]
name = "3d-calculator"
version = "0.1.0"
description = "Online 3D model calculator and production cost analyzer"
authors = ["Antigravity <test@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
celery = "^5.3.6"
redis = "^5.0.1"
trimesh = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
openai = "^1.12.0"
scipy = "^1.12.0"
networkx = "^3.2.1"
email-validator = "^2.1.1"
pydantic-settings = "^2.2.1"
google-auth = "^2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
